// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/swift extractPackageFile() parses multiple packages 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "0.1.0",
      "datasource": "gitTags",
      "depName": "avito-tech/GraphiteClient",
      "fileReplacePosition": 1177,
      "lookupName": "https://github.com/avito-tech/GraphiteClient.git",
    },
    Object {
      "currentValue": "1.0.16",
      "datasource": "gitTags",
      "depName": "IBM-Swift/BlueSignals",
      "fileReplacePosition": 1268,
      "lookupName": "https://github.com/IBM-Swift/BlueSignals.git",
    },
    Object {
      "currentValue": "3.0.6",
      "datasource": "gitTags",
      "depName": "daltoniam/Starscream",
      "fileReplacePosition": 1439,
      "lookupName": "https://github.com/daltoniam/Starscream.git",
    },
    Object {
      "currentValue": "1.4.6",
      "datasource": "gitTags",
      "depName": "httpswift/swifter",
      "fileReplacePosition": 1523,
      "lookupName": "https://github.com/httpswift/swifter.git",
    },
    Object {
      "currentValue": "from : \\"0.9.6\\"",
      "datasource": "gitTags",
      "depName": "weichsel/ZIPFoundation",
      "fileReplacePosition": 1626,
      "lookupName": "https://github.com/weichsel/ZIPFoundation/",
    },
  ],
  "packageFile": null,
}
`;

exports[`lib/manager/swift extractPackageFile() parses package descriptions 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "from:\\"1.2.3\\"",
      "datasource": "gitTags",
      "depName": "vapor/vapor",
      "fileReplacePosition": 64,
      "lookupName": "https://github.com/vapor/vapor.git",
    },
  ],
  "packageFile": null,
}
`;

exports[`lib/manager/swift extractPackageFile() parses package descriptions 2`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "\\"1.2.3\\"...",
      "datasource": "gitTags",
      "depName": "vapor/vapor",
      "fileReplacePosition": 64,
      "lookupName": "https://github.com/vapor/vapor.git",
    },
  ],
  "packageFile": null,
}
`;

exports[`lib/manager/swift extractPackageFile() parses package descriptions 3`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "\\"1.2.3\\"...\\"1.2.4\\"",
      "datasource": "gitTags",
      "depName": "vapor/vapor",
      "fileReplacePosition": 64,
      "lookupName": "https://github.com/vapor/vapor.git",
    },
  ],
  "packageFile": null,
}
`;

exports[`lib/manager/swift extractPackageFile() parses package descriptions 4`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "\\"1.2.3\\"..<\\"1.2.4\\"",
      "datasource": "gitTags",
      "depName": "vapor/vapor",
      "fileReplacePosition": 64,
      "lookupName": "https://github.com/vapor/vapor.git",
    },
  ],
  "packageFile": null,
}
`;

exports[`lib/manager/swift extractPackageFile() parses package descriptions 5`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "...\\"1.2.3\\"",
      "datasource": "gitTags",
      "depName": "vapor/vapor",
      "fileReplacePosition": 64,
      "lookupName": "https://github.com/vapor/vapor.git",
    },
  ],
  "packageFile": null,
}
`;

exports[`lib/manager/swift extractPackageFile() parses package descriptions 6`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "..<\\"1.2.3\\"",
      "datasource": "gitTags",
      "depName": "vapor/vapor",
      "fileReplacePosition": 64,
      "lookupName": "https://github.com/vapor/vapor.git",
    },
  ],
  "packageFile": null,
}
`;
